# blueberry

./: .env  .gitignore  Cargo.toml  README.md
scripts/: main.lua
src/: config.rs  ctxdata.rs  db.rs  error.rs  main.rs  observer.rs
src/controller/: dotlua.rs  feedback.rs  mod.rs
src/genai/: mod.rs  models.rs  provider.rs
src/sellerapi/: mod.rs
src/sellerapi/abc/: client.rs  mod.rs  models.rs  util.rs
src/sellerapi/ozon/: client.rs  mod.rs
src/sellerapi/ozon/models/: category.rs  info.rs  mod.rs  params.rs  product.rs  question.rs  review.rs
src/sellerapi/wb/: client.rs  mod.rs
src/sellerapi/wb/models/: mod.rs  params.rs  product.rs  question.rs  review.rs
src/webapp/: mod.rs  router.rs  state.rs
templates/: base.j2  product_summary.j2  question.j2
