[package]
name = "blueberry"
version = "0.1.0"
edition = "2024"

[lints.rust]
unused = { level = "allow", priority = -1 }

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["server", "http1", "tokio"] }
http-body-util = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tera = "1"
thiserror = "2"
dotenv = "0.15.0"
time = { version = "0.3", features = ["parsing", "formatting"] }
mlua = { version = "0.11", features = ["lua54", "vendored"] }
rusqlite = { version = "0.37", features = ["bundled"] }
